# iot_edge_workshop

./: .gitignore  README.md
IotEdgeWorkshop/: .env  deployment.template.json
IotEdgeWorkshop/modules/: chmodQemu.sh
IotEdgeWorkshop/modules/Csample/: module.json
IotEdgeWorkshop/modules/FilterModule/: Dockerfile.arm32v7  Program.cs  azure-iot-test-only.root.ca.cert.pem  module.json
IotEdgeWorkshop/modules/TempSensor/: Dockerfile.arm32v7  Program.cs  TempSensor.csproj  module.json
docs/: ARM-raspbian.md  acr.md  buildagent.md  iotedgeruntime.md  iothub.md  vsc.md  vsts.md
helper/: checkip.sh
raspi_bme280/: CMakeLists.txt  bme280.c  bme280.h  main.c  wiring.h
